@@ -36,8 +36,14 @@ Tomography = [
 		{"tag": "protocol_group", "text": "Segmentation", "openItem": "False", "children": []}
 	]},
 	{"tag": "section", "text": "Particles", "children": [
-	    {"tag": "protocol_group", "text": "Picking", "openItem": "False", "children": [
-            {"tag": "protocol", "value": "ProtTomoExtractCoords",   "text": "default"}]}
+	    {"tag": "protocol_group", "text": "Picking", "openItem": "False", "children": []
+        },
+        {"tag": "protocol_group", "text": "Extract", "openItem": "False", "children": [
+            {"tag": "protocol", "value": "ProtTomoExtractCoords",   "text": "default"}]
+        },
+        {"tag": "protocol_group", "text": "Others", "openItem": "False", "children": [
+            {"tag": "protocol", "value": "TomoProtFitEllipsoid",   "text": "default"}]
+        }
 	]},
 	{"tag": "section", "text": "Subtomogram averaging", "children": [
 		{"tag": "section", "text": "Preprocessing", "children": [
